[gd_scene load_steps=28 format=3 uid="uid://ce1g4ap0kr6ig"]

[ext_resource type="Script" uid="uid://cejjd8k5cuida" path="res://player/bear.gd" id="1_jiicd"]
[ext_resource type="Texture2D" uid="uid://cki1wwqs4nn2e" path="res://animations/bear/walk.png" id="2_6iw26"]
[ext_resource type="Texture2D" uid="uid://bhapy7atoq2g5" path="res://animations/bear/idle.png" id="2_fk0x7"]
[ext_resource type="Texture2D" uid="uid://m712a4cvpcce" path="res://animations/bear/fly.png" id="2_poggw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6lbgp"]
atlas = ExtResource("2_poggw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntp5v"]
atlas = ExtResource("2_poggw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkgpu"]
atlas = ExtResource("2_poggw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_daso2"]
atlas = ExtResource("2_poggw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8rde"]
atlas = ExtResource("2_poggw")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blwww"]
atlas = ExtResource("2_poggw")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnyj3"]
atlas = ExtResource("2_poggw")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l131v"]
atlas = ExtResource("2_poggw")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l3ag"]
atlas = ExtResource("2_poggw")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iw26"]
atlas = ExtResource("2_fk0x7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0lte"]
atlas = ExtResource("2_fk0x7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_poggw"]
atlas = ExtResource("2_fk0x7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy7t1"]
atlas = ExtResource("2_fk0x7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q368e"]
atlas = ExtResource("2_6iw26")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdp55"]
atlas = ExtResource("2_6iw26")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tqxq"]
atlas = ExtResource("2_6iw26")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14jp0"]
atlas = ExtResource("2_6iw26")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaovh"]
atlas = ExtResource("2_6iw26")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5d70"]
atlas = ExtResource("2_6iw26")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u6qq"]
atlas = ExtResource("2_6iw26")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5knx"]
atlas = ExtResource("2_6iw26")
region = Rect2(192, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jiicd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lbgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntp5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkgpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daso2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8rde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blwww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnyj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l131v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l3ag")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iw26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0lte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poggw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy7t1")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q368e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdp55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tqxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14jp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaovh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5d70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u6qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5knx")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fk0x7"]
radius = 10.9975
height = 37.9912

[node name="Bear" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_jiicd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -15)
sprite_frames = SubResource("SpriteFrames_jiicd")
animation = &"idle"
frame_progress = 0.579325

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_fk0x7")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="needPollen" type="Label" parent="."]
offset_left = -114.0
offset_top = -74.0
offset_right = 141.0
offset_bottom = -51.0
text = "Need Pollen! Visit the Pollen Bee."

[node name="taskComplete" type="Label" parent="."]
offset_left = -51.0
offset_top = -74.0
offset_right = 78.0
offset_bottom = -51.0
text = "Task Completed."

[node name="taskSort" type="Label" parent="."]
offset_left = -110.0
offset_top = -75.0
offset_right = 141.0
offset_bottom = -52.0
text = "Task Completed. Sort the Pollen."

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
